filter by arbitrary HUC8

--- a/templates/datarequest_data.html
+++ b/templates/datarequest_data.html
@@ -10,7 +10,7 @@
         <h3>{{label}}</h3>
       </div>
       <div data-role="content">
-        <h3>Loading {{webservice_label}} Data</h3>
+        <h3>Loading {{label}}...</h3>
         <progress data-url="/datarequests/{{id}}/status.json?task={{task_id}}"
                   data-interval=0.25>
           Loading...
