--- a/templates/datarequest_detail.html
+++ b/templates/datarequest_detail.html
@@ -12,6 +12,7 @@
       <div data-role="content">
         <table>
            <tr><th>Web Service</th><td>{{webservice_label}}</td></tr>
+           <tr><th>Region</th><td>{{region_label}} ({{region_id}})</td></tr>
            <tr><th>Requested On</th><td>{{requested_label}}</td></tr>
            {{#completed}}
            <tr><th>Completed On</th><td>{{completed_label}}</td></tr>
