--- a/app/css/climata_viewer/base.css
+++ b/app/css/climata_viewer/base.css
@@ -1,3 +1,10 @@
 progress {
     width: 100%;
 }
+li.ui-field-contain {
+    border-bottom: 1px solid #ddd;
+}
+.error {
+    color: red;
+    text-align: center;
+}
