--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
       </div>
       <div data-role="content">
         <ul data-role="listview" data-inset="true">
-          <li><a href="/datarequests/new">Request Data</a></li>
+          <li><a href="/webservices">Request Data</a></li>
           <li><a href="/datarequests/">View Stored Requests</a></li>
         </ul>
         <p>Version {{version}}</p>
