--- a/templates/datarequest_data.html
+++ b/templates/datarequest_data.html
@@ -4,7 +4,7 @@
     {{>head}}
   </head>
   <body>
-    <div data-role="page">
+    <div data-role="page" data-url="/datarequests/{{id}}/data">
       <div data-role="header">
         <a href="/" data-icon="home" data-iconpos="notext">Home</a>
         <h3>{{label}}</h3>
