use webservice-specific param codes

--- a/templates/datarequest_edit.html
+++ b/templates/datarequest_edit.html
@@ -20,6 +20,7 @@
             {{#inverserelationships}}
             <li data-role="fieldcontain">
               <label for="d-ir-{{type_id}}">{{type_label}}</label>
+
               {{#use_select}}
               <select id="d-ir-{{type_id}}"
                 name="inverserelationship-{{type_id}}-item_id"
@@ -28,11 +29,8 @@
                    {{#required}}Pick an option...{{/required}}
                    {{^required}}Any / All{{/required}}
                 </option>
-              {{#item_choices}}
-                <option value="{{id}}">{{label}}</option>
-              {{/item_choices}}
-              </select>
               {{/use_select}}
+
               {{^use_select}}
               <input id="d-ir-{{type_id}}" list="d-choices-{{type_id}}"
                 name="inverserelationship-{{type_id}}-item_id"
@@ -45,11 +43,15 @@
                 placeholder="Leave blank for any/all"
                 {{/required}}>
               <datalist id="d-choices-{{type_id}}">
-              {{#item_choices}}
-                <option value="{{id}}">{{label}} ({{id}})</option>
-              {{/item_choices}}
-              </datalist>
               {{/use_select}}
+
+              {{#item_choices}}
+                <option value="{{id}}">{{label}}</option>
+              {{/item_choices}}
+
+              {{#use_select}}</select>{{/use_select}}
+              {{^use_select}}</datalist>{{/use_select}}
+
               <p class="error datarequest-inverserelationship-{{type_id}}-errors"></p>
             </li>
             {{/inverserelationships}}
