--- a/templates/datarequest_data.html
+++ b/templates/datarequest_data.html
@@ -3,7 +3,7 @@
   <head>
     {{>head}}
   </head>
-  <body>
+  <body{{>login_class}}>
     <div data-role="page" data-url="/datarequests/{{id}}/data">
       <div data-role="header">
         <a href="/" data-icon="home" data-iconpos="notext">Home</a>
