--- a/templates/datarequest_edit.html
+++ b/templates/datarequest_edit.html
@@ -4,7 +4,7 @@
     <title>Request Data</title>
     {{>head}}
   </head>
-  <body>
+  <body{{>login_class}}>
     <div data-role="page">
       <div data-role="header">
         <a href="/" data-icon="home" data-iconpos="notext">Home</a>
