show detailed error message (fixes #5)

--- a/templates/datarequest_auto.html
+++ b/templates/datarequest_auto.html
@@ -18,7 +18,7 @@
         <div style="display:none" class="complete">
           {{>download}}
         </div>
-        <div class="message"></div>
+        <p class="message"></p>
       </div>
     </div>
   </body>
