--- a/templates/datarequest_auto.html
+++ b/templates/datarequest_auto.html
@@ -19,6 +19,12 @@
           {{>download}}
         </div>
         <p class="message"></p>
+        <div style="display:none" class="retry">
+          <form action="/datarequests/{{id}}/auto" method="post" data-json="false">
+            {{>csrf}}
+            <button type="submit">Try Again</button>
+          </form>
+        </div>
       </div>
     </div>
   </body>
