integrate chart previews

--- a/templates/datarequest_auto.html
+++ b/templates/datarequest_auto.html
@@ -25,6 +25,7 @@
             <button type="submit">Try Again</button>
           </form>
         </div>
+        <svg></svg>
       </div>
     </div>
   </body>
