--- a/templates/datarequest_edit.html
+++ b/templates/datarequest_edit.html
@@ -35,6 +35,7 @@
               <input id="d-ir-{{type_id}}" list="d-choices-{{type_id}}"
                 name="inverserelationship-{{type_id}}-item_id"
                 value="{{item_id}}"
+                autocomplete="off"
                 {{#required}}
                 required
                 placeholder="Start typing an option..."
@@ -42,12 +43,18 @@
                 {{^required}}
                 placeholder="Leave blank for any/all"
                 {{/required}}>
-              <datalist id="d-choices-{{type_id}}">
+              <datalist id="d-choices-{{type_id}}"
+                {{#use_remote}} 
+                  data-url="/search.json?type={{from_type}}{{#filter_auth}}&authority_id={{authority_id}}{{/filter_auth}}"
+                {{/use_remote}}
+                >
               {{/use_select}}
 
+              {{^use_remote}}
               {{#item_choices}}
                 <option value="{{id}}">{{label}}</option>
               {{/item_choices}}
+              {{/use_remote}}
 
               {{#use_select}}</select>{{/use_select}}
               {{^use_select}}</datalist>{{/use_select}}
