autofilter county dropdown by state (see #3, #14)

--- a/templates/datarequest_edit.html
+++ b/templates/datarequest_edit.html
@@ -52,7 +52,10 @@
 
               {{^use_remote}}
               {{#item_choices}}
-                <option value="{{id}}">{{label}}</option>
+                <option value="{{id}}"
+                    {{#state_id}}data-state_id={{state_id}}{{/state_id}}>
+                  {{label}}
+                </option>
               {{/item_choices}}
               {{/use_remote}}
 
