--- a/templates/datarequest_auto.html
+++ b/templates/datarequest_auto.html
@@ -17,12 +17,14 @@
         </progress>
         <div style="display:none" class="complete">
           {{>download}}
+          <a data-role="button" href="/">Back to Home</a>
         </div>
         <p class="message"></p>
         <div style="display:none" class="retry">
           <form action="/datarequests/{{id}}/auto" method="post" data-json="false">
             {{>csrf}}
             <button type="submit">Try Again</button>
+            <a data-role="button" href="/">Back to Home</a>
           </form>
         </div>
         <svg></svg>
