option to share result publicly on homepage

--- a/templates/datarequest_auto.html
+++ b/templates/datarequest_auto.html
@@ -17,6 +17,11 @@
         </progress>
         <div style="display:none" class="complete">
           {{>download}}
+          <p>
+            Display result publicly on home page?
+            <br>
+            {{>toggle}}
+          </p>
           <a data-role="button" href="/">Back to Home</a>
         </div>
         <p class="message"></p>
