--- a/templates/datarequest_list.html
+++ b/templates/datarequest_list.html
@@ -6,11 +6,11 @@
       <div data-role="header">
         <a href="/" data-icon="home" data-iconpos="notext">Home</a>
         <h3>Data Requests</h3>
-        <a href="/webservices" data-icon="add" data-iconpos="right">New Request</a>
+        <a href="/webservices" data-icon="add" data-iconpos="right" class="login-shown">New Request</a>
       </div>
       <div data-role="content">
         {{#is_authenticated}}
-        <p class="login-show">Data Requests for {{user.username}}</p>
+        <p class="login-shown">Data Requests for {{user.username}}</p>
         {{/is_authenticated}}
         <ul data-role="listview">
           {{#list}}
@@ -22,7 +22,7 @@
           </li>
           {{/list}}
           {{^list}}
-          <li data-icon="add" data-iconpos="right">
+          <li data-icon="add" data-iconpos="right" class="login-shown">
             <a href="/webservices">New Request</a>
           </li>
           {{/list}}
