python code examples

--- a/app/css/climata_viewer.css
+++ b/app/css/climata_viewer.css
@@ -1,3 +1,4 @@
 @import url("lib/jquery.mobile.css");
+@import url("lib/highlight.css");
 @import url("climata_viewer/base.css");
 @import url("climata_viewer/responsive.css");
