--- a/templates/datarequest_detail.html
+++ b/templates/datarequest_detail.html
@@ -43,6 +43,10 @@
           <tr class="login-shown"><th>Public</th><td>{{>toggle}}</td></tr>
           {{/completed}}
         </table>
+        <div data-role="collapsible">
+          <h3>Python Code Example</h3>
+          <pre><code class="python">{{as_python}}</code></pre>
+        </div>
       </div>
     </div>
   </body>
