--- a/app/css/climata_viewer.css
+++ b/app/css/climata_viewer.css
@@ -1,4 +1,5 @@
 @import url("lib/jquery.mobile.css");
 @import url("lib/highlight.css");
+@import url("lib/leaflet.css");
 @import url("climata_viewer/base.css");
 @import url("climata_viewer/responsive.css");
