--- a/templates/datarequest_auto.html
+++ b/templates/datarequest_auto.html
@@ -11,8 +11,7 @@
       </div>
       <div data-role="content">
         <h3>Loading {{label}}...</h3>
-        <progress data-url="/datarequests/{{id}}/status.json?task={{task_id}}"
-                  data-interval=0.25>
+        <progress data-url="/datarequests/{{id}}/status.json?task={{task_id}}">
           Loading...
         </progress>
         <div style="display:none" class="complete">
