--- a/templates/datarequest_detail.html
+++ b/templates/datarequest_detail.html
@@ -10,6 +10,9 @@
         <h3>{{label}}</h3>
       </div>
       <div data-role="content">
+        <div class="ui-grid-a ui-responsive">
+        <div class="ui-block-a">
+
         <table>
           <tr><th>Web Service</th><td>{{webservice_label}}</td></tr>
           <tr><th>Data Range</th><td>{{start_date}} to {{end_date}}</td></tr>
@@ -32,8 +35,18 @@
         </div>
 
         {{#completed}}
+        </div>
+        <div class="ui-block-b">
+          <div id="datarequest-{{id}}-map" class="map"></div>
+        {{/completed}}
+        </div>
+        </div>
+
+        {{#completed}}
+        <hr>
         <svg></svg>
         {{/completed}}
+
         <hr>
         <table>
           <tr><th>Requested On</th><td>{{requested_label}}</td></tr>
