--- a/templates/login.html
+++ b/templates/login.html
@@ -17,6 +17,7 @@
           <li><a href="/login/facebook" rel="external">Facebook</a></li>
           <li><a href="/login/twitter" rel="external">Twitter</a></li>
           <li><a href="/login/github" rel="external">Github</a></li>
+          <li><a href="/login/linkedin-oauth2" rel="external">LinkedIn</a></li>
         </ul>
       </div>
     </div>
