--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
         <ul data-role="listview" data-inset="true" class="login-shown">
           <li><a href="/webservices">Request Data</a></li>
           <li><a href="/datarequests/">View Previous Requests</a></li>
+          <li><a href="/projects/">View Project Folders</a></li>
           <li><a href="/logout">Log Out</a></li>
         </ul>
         <ul data-role="listview" data-inset="true" class="logout-shown">
