--- a/templates/partials/del.html
+++ b/templates/partials/del.html
@@ -1,3 +1,3 @@
-<button onclick="require('climata_viewer/login').del({{id}});">
+<button onclick="require('climata_viewer/login').del('{{page}}', '{{id}}');">
    Delete this Request
 </button>
