--- a/templates/datarequest_detail.html
+++ b/templates/datarequest_detail.html
@@ -7,12 +7,11 @@
     <div data-role="page">
       <div data-role="header">
         <a href="/" data-icon="home" data-iconpos="notext">Home</a>
-        <h3>{{label}}</h3>
+        <h3>{{webservice_label}}</h3>
       </div>
       <div data-role="content">
         <div class="ui-grid-a ui-responsive">
         <div class="ui-block-a">
-
         <table>
           <tr><th>Web Service</th><td>{{webservice_label}}</td></tr>
           <tr><th>Data Range</th><td>{{start_date}} to {{end_date}}</td></tr>
