--- a/templates/project_list.html
+++ b/templates/project_list.html
@@ -5,39 +5,38 @@
     <div data-role="page">
       <div data-role="header">
         <a href="/" data-icon="home" data-iconpos="notext">Home</a>
-        <h3>Data Requests</h3>
-        <a href="/webservices" data-icon="add" data-iconpos="right" class="login-shown">New Request</a>
+        <h3>Project Folders</h3>
+        <a href="/projects/new" data-icon="add" data-iconpos="right" class="login-shown">New Project Folder</a>
       </div>
       <div data-role="header">
         <div data-role="navbar">
           <ul>
-            <li><a href="/datarequests/" class="ui-btn-active ui-state-persist">Data Requests</a></li>
-            <li><a href="/projects/">Project Folders</a></li>
+            <li><a href="/datarequests/">Data Requests</a></li>
+            <li><a href="/projects/" class="ui-btn-active ui-state-persist">Project Folders</a></li>
           </ul>
         </div>
       </div>
       <div data-role="content">
         {{#is_authenticated}}
-        <p class="login-shown">Data Requests for {{user.username}}</p>
+        <p class="login-shown">Project Folders for {{user.username}}</p>
         {{/is_authenticated}}
         <ul data-role="listview" data-filter="true" data-count-theme="b">
           {{#list}}
           {{^deleted}}
           <li>
-            <a href="/datarequests/{{id}}">
-              <p class="ui-li-aside">{{requested_label}}</p>
+            <a href="/projects/{{id}}">
+              <p class="ui-li-aside">{{created_label}}</p>
               {{#is_authenticated}}{{#public}}
               <span class="ui-li-count">Public</span>
               {{/public}}{{/is_authenticated}}
-              <h3>{{webservice_label}}</h3>
-              <p>{{label}}</p>
+              <h3>{{label}}</h3>
             </a>
           </li>
           {{/deleted}}
           {{/list}}
           {{^list}}
           <li data-icon="add" data-iconpos="right" class="login-shown">
-            <a href="/webservices">New Request</a>
+            <a href="/projects/new">New Project Folder</a>
           </li>
           {{/list}}
         </ul>
